compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ESCRIBE
    FALSO
    NADA
    RESTO
    VERDADERO

Grammar

Rule 0     S' -> prg
Rule 1     prg -> declarations statements
Rule 2     declarations -> decl
Rule 3     declarations -> declarations decl
Rule 4     decl -> declV
Rule 5     decl -> declF
Rule 6     decl -> declL
Rule 7     declV -> VAR ids : tipo ENTER
Rule 8     ids -> ID
Rule 9     ids -> ids , ID
Rule 10    tipo -> ENTERO
Rule 11    tipo -> REAL
Rule 12    tipo -> BOOLEANO
Rule 13    declL -> LISTA ID = lista ENTER
Rule 14    lista -> [ ]
Rule 15    lista -> [ elementos ]
Rule 16    elementos -> elemento
Rule 17    elementos -> elementos , elemento
Rule 18    elemento -> INT
Rule 19    elemento -> FLOAT
Rule 20    elemento -> BOOLEANO
Rule 21    elemento -> STRING
Rule 22    elemento -> ID
Rule 23    elemento -> lista
Rule 24    declF -> FUNCION ID ( parametros ) : ENTERO ENTER declarationsF statementsI DEVUELVE return
Rule 25    declF -> FUNCION ID ( ) : ENTERO ENTER declarationsF statementsI DEVUELVE return
Rule 26    parametros -> ID : tipo
Rule 27    parametros -> parametros , ID : tipo
Rule 28    declarationsF -> TAB decl
Rule 29    declarationsF -> declarationsF TAB decl
Rule 30    return -> INT ENTER
Rule 31    return -> ID ENTER
Rule 32    statementsI -> TAB stat
Rule 33    statementsI -> statementsI TAB stat
Rule 34    statements -> stat
Rule 35    statements -> statements stat
Rule 36    stat -> atrib ENTER
Rule 37    stat -> conditions
Rule 38    stat -> ciclos
Rule 39    atrib -> ID = exp
Rule 40    exp -> exp + termo
Rule 41    exp -> exp - termo
Rule 42    exp -> termo
Rule 43    termo -> termo * fator
Rule 44    termo -> termo / fator
Rule 45    termo -> termo ^ fator
Rule 46    termo -> fator
Rule 47    fator -> INT
Rule 48    fator -> FLOAT
Rule 49    fator -> ID
Rule 50    fator -> ( exp )
Rule 51    conditions -> SI expL ENTONCES ENTER statementsI
Rule 52    conditions -> SI expL ENTONCES ENTER statementsI SI NO ENTER statementsI
Rule 53    expL -> termoB
Rule 54    expL -> expL O termoB
Rule 55    termoB -> fatorB
Rule 56    termoB -> termoB y fatorB
Rule 57    fatorB -> condition
Rule 58    fatorB -> BOOLEANO
Rule 59    fatorB -> ( expL )
Rule 60    condition -> exp op exp
Rule 61    op -> >
Rule 62    op -> <
Rule 63    op -> IGUAL
Rule 64    op -> DIFERENTE
Rule 65    op -> > IGUAL
Rule 66    op -> < IGUAL
Rule 67    ciclos -> ENCUANTO expL HACER ENTER statementsI
Rule 68    ciclos -> PARA expL SIGUIENTE atrib . ENTER
Rule 69    ciclos -> PARA expL SIGUIENTE atrib HACER ENTER statementsI

Terminals, with rules where they appear

(                    : 24 25 50 59
)                    : 24 25 50 59
*                    : 43
+                    : 40
,                    : 9 17 27
-                    : 41
.                    : 68
/                    : 44
:                    : 7 24 25 26 27
<                    : 62 66
=                    : 13 39
>                    : 61 65
BOOLEANO             : 12 20 58
DEVUELVE             : 24 25
DIFERENTE            : 64
ENCUANTO             : 67
ENTER                : 7 13 24 25 30 31 36 51 52 52 67 68 69
ENTERO               : 10 24 25
ENTONCES             : 51 52
ESCRIBE              : 
FALSO                : 
FLOAT                : 19 48
FUNCION              : 24 25
HACER                : 67 69
ID                   : 8 9 13 22 24 25 26 27 31 39 49
IGUAL                : 63 65 66
INT                  : 18 30 47
LISTA                : 13
NADA                 : 
NO                   : 52
O                    : 54
PARA                 : 68 69
REAL                 : 11
RESTO                : 
SI                   : 51 52 52
SIGUIENTE            : 68 69
STRING               : 21
TAB                  : 28 29 32 33
VAR                  : 7
VERDADERO            : 
[                    : 14 15
]                    : 14 15
^                    : 45
error                : 
y                    : 56

Nonterminals, with rules where they appear

atrib                : 36 68 69
ciclos               : 38
condition            : 57
conditions           : 37
decl                 : 2 3 28 29
declF                : 5
declL                : 6
declV                : 4
declarations         : 1 3
declarationsF        : 24 25 29
elemento             : 16 17
elementos            : 15 17
exp                  : 39 40 41 50 60 60
expL                 : 51 52 54 59 67 68 69
fator                : 43 44 45 46
fatorB               : 55 56
ids                  : 7 9
lista                : 13 23
op                   : 60
parametros           : 24 27
prg                  : 0
return               : 24 25
stat                 : 32 33 34 35
statements           : 1 35
statementsI          : 24 25 33 51 52 52 67 69
termo                : 40 41 42 43 44 45
termoB               : 53 54 56
tipo                 : 7 26 27

Parsing method: LALR

state 0

    (0) S' -> . prg
    (1) prg -> . declarations statements
    (2) declarations -> . decl
    (3) declarations -> . declarations decl
    (4) decl -> . declV
    (5) decl -> . declF
    (6) decl -> . declL
    (7) declV -> . VAR ids : tipo ENTER
    (24) declF -> . FUNCION ID ( parametros ) : ENTERO ENTER declarationsF statementsI DEVUELVE return
    (25) declF -> . FUNCION ID ( ) : ENTERO ENTER declarationsF statementsI DEVUELVE return
    (13) declL -> . LISTA ID = lista ENTER

    VAR             shift and go to state 7
    FUNCION         shift and go to state 8
    LISTA           shift and go to state 9

    prg                            shift and go to state 1
    declarations                   shift and go to state 2
    decl                           shift and go to state 3
    declV                          shift and go to state 4
    declF                          shift and go to state 5
    declL                          shift and go to state 6

state 1

    (0) S' -> prg .



state 2

    (1) prg -> declarations . statements
    (3) declarations -> declarations . decl
    (34) statements -> . stat
    (35) statements -> . statements stat
    (4) decl -> . declV
    (5) decl -> . declF
    (6) decl -> . declL
    (36) stat -> . atrib ENTER
    (37) stat -> . conditions
    (38) stat -> . ciclos
    (7) declV -> . VAR ids : tipo ENTER
    (24) declF -> . FUNCION ID ( parametros ) : ENTERO ENTER declarationsF statementsI DEVUELVE return
    (25) declF -> . FUNCION ID ( ) : ENTERO ENTER declarationsF statementsI DEVUELVE return
    (13) declL -> . LISTA ID = lista ENTER
    (39) atrib -> . ID = exp
    (51) conditions -> . SI expL ENTONCES ENTER statementsI
    (52) conditions -> . SI expL ENTONCES ENTER statementsI SI NO ENTER statementsI
    (67) ciclos -> . ENCUANTO expL HACER ENTER statementsI
    (68) ciclos -> . PARA expL SIGUIENTE atrib . ENTER
    (69) ciclos -> . PARA expL SIGUIENTE atrib HACER ENTER statementsI

    VAR             shift and go to state 7
    FUNCION         shift and go to state 8
    LISTA           shift and go to state 9
    ID              shift and go to state 16
    SI              shift and go to state 17
    ENCUANTO        shift and go to state 18
    PARA            shift and go to state 19

    statements                     shift and go to state 10
    decl                           shift and go to state 11
    stat                           shift and go to state 12
    declV                          shift and go to state 4
    declF                          shift and go to state 5
    declL                          shift and go to state 6
    atrib                          shift and go to state 13
    conditions                     shift and go to state 14
    ciclos                         shift and go to state 15

state 3

    (2) declarations -> decl .

    VAR             reduce using rule 2 (declarations -> decl .)
    FUNCION         reduce using rule 2 (declarations -> decl .)
    LISTA           reduce using rule 2 (declarations -> decl .)
    ID              reduce using rule 2 (declarations -> decl .)
    SI              reduce using rule 2 (declarations -> decl .)
    ENCUANTO        reduce using rule 2 (declarations -> decl .)
    PARA            reduce using rule 2 (declarations -> decl .)


state 4

    (4) decl -> declV .

    VAR             reduce using rule 4 (decl -> declV .)
    FUNCION         reduce using rule 4 (decl -> declV .)
    LISTA           reduce using rule 4 (decl -> declV .)
    ID              reduce using rule 4 (decl -> declV .)
    SI              reduce using rule 4 (decl -> declV .)
    ENCUANTO        reduce using rule 4 (decl -> declV .)
    PARA            reduce using rule 4 (decl -> declV .)
    TAB             reduce using rule 4 (decl -> declV .)


state 5

    (5) decl -> declF .

    VAR             reduce using rule 5 (decl -> declF .)
    FUNCION         reduce using rule 5 (decl -> declF .)
    LISTA           reduce using rule 5 (decl -> declF .)
    ID              reduce using rule 5 (decl -> declF .)
    SI              reduce using rule 5 (decl -> declF .)
    ENCUANTO        reduce using rule 5 (decl -> declF .)
    PARA            reduce using rule 5 (decl -> declF .)
    TAB             reduce using rule 5 (decl -> declF .)


state 6

    (6) decl -> declL .

    VAR             reduce using rule 6 (decl -> declL .)
    FUNCION         reduce using rule 6 (decl -> declL .)
    LISTA           reduce using rule 6 (decl -> declL .)
    ID              reduce using rule 6 (decl -> declL .)
    SI              reduce using rule 6 (decl -> declL .)
    ENCUANTO        reduce using rule 6 (decl -> declL .)
    PARA            reduce using rule 6 (decl -> declL .)
    TAB             reduce using rule 6 (decl -> declL .)


state 7

    (7) declV -> VAR . ids : tipo ENTER
    (8) ids -> . ID
    (9) ids -> . ids , ID

    ID              shift and go to state 21

    ids                            shift and go to state 20

state 8

    (24) declF -> FUNCION . ID ( parametros ) : ENTERO ENTER declarationsF statementsI DEVUELVE return
    (25) declF -> FUNCION . ID ( ) : ENTERO ENTER declarationsF statementsI DEVUELVE return

    ID              shift and go to state 22


state 9

    (13) declL -> LISTA . ID = lista ENTER

    ID              shift and go to state 23


state 10

    (1) prg -> declarations statements .
    (35) statements -> statements . stat
    (36) stat -> . atrib ENTER
    (37) stat -> . conditions
    (38) stat -> . ciclos
    (39) atrib -> . ID = exp
    (51) conditions -> . SI expL ENTONCES ENTER statementsI
    (52) conditions -> . SI expL ENTONCES ENTER statementsI SI NO ENTER statementsI
    (67) ciclos -> . ENCUANTO expL HACER ENTER statementsI
    (68) ciclos -> . PARA expL SIGUIENTE atrib . ENTER
    (69) ciclos -> . PARA expL SIGUIENTE atrib HACER ENTER statementsI

    $end            reduce using rule 1 (prg -> declarations statements .)
    ID              shift and go to state 16
    SI              shift and go to state 17
    ENCUANTO        shift and go to state 18
    PARA            shift and go to state 19

    stat                           shift and go to state 24
    atrib                          shift and go to state 13
    conditions                     shift and go to state 14
    ciclos                         shift and go to state 15

state 11

    (3) declarations -> declarations decl .

    VAR             reduce using rule 3 (declarations -> declarations decl .)
    FUNCION         reduce using rule 3 (declarations -> declarations decl .)
    LISTA           reduce using rule 3 (declarations -> declarations decl .)
    ID              reduce using rule 3 (declarations -> declarations decl .)
    SI              reduce using rule 3 (declarations -> declarations decl .)
    ENCUANTO        reduce using rule 3 (declarations -> declarations decl .)
    PARA            reduce using rule 3 (declarations -> declarations decl .)


state 12

    (34) statements -> stat .

    ID              reduce using rule 34 (statements -> stat .)
    SI              reduce using rule 34 (statements -> stat .)
    ENCUANTO        reduce using rule 34 (statements -> stat .)
    PARA            reduce using rule 34 (statements -> stat .)
    $end            reduce using rule 34 (statements -> stat .)


state 13

    (36) stat -> atrib . ENTER

    ENTER           shift and go to state 25


state 14

    (37) stat -> conditions .

    ID              reduce using rule 37 (stat -> conditions .)
    SI              reduce using rule 37 (stat -> conditions .)
    ENCUANTO        reduce using rule 37 (stat -> conditions .)
    PARA            reduce using rule 37 (stat -> conditions .)
    $end            reduce using rule 37 (stat -> conditions .)
    TAB             reduce using rule 37 (stat -> conditions .)
    DEVUELVE        reduce using rule 37 (stat -> conditions .)


state 15

    (38) stat -> ciclos .

    ID              reduce using rule 38 (stat -> ciclos .)
    SI              reduce using rule 38 (stat -> ciclos .)
    ENCUANTO        reduce using rule 38 (stat -> ciclos .)
    PARA            reduce using rule 38 (stat -> ciclos .)
    $end            reduce using rule 38 (stat -> ciclos .)
    TAB             reduce using rule 38 (stat -> ciclos .)
    DEVUELVE        reduce using rule 38 (stat -> ciclos .)


state 16

    (39) atrib -> ID . = exp

    =               shift and go to state 26


state 17

    (51) conditions -> SI . expL ENTONCES ENTER statementsI
    (52) conditions -> SI . expL ENTONCES ENTER statementsI SI NO ENTER statementsI
    (53) expL -> . termoB
    (54) expL -> . expL O termoB
    (55) termoB -> . fatorB
    (56) termoB -> . termoB y fatorB
    (57) fatorB -> . condition
    (58) fatorB -> . BOOLEANO
    (59) fatorB -> . ( expL )
    (60) condition -> . exp op exp
    (40) exp -> . exp + termo
    (41) exp -> . exp - termo
    (42) exp -> . termo
    (43) termo -> . termo * fator
    (44) termo -> . termo / fator
    (45) termo -> . termo ^ fator
    (46) termo -> . fator
    (47) fator -> . INT
    (48) fator -> . FLOAT
    (49) fator -> . ID
    (50) fator -> . ( exp )

    BOOLEANO        shift and go to state 31
    (               shift and go to state 32
    INT             shift and go to state 36
    FLOAT           shift and go to state 37
    ID              shift and go to state 38

    expL                           shift and go to state 27
    termoB                         shift and go to state 28
    fatorB                         shift and go to state 29
    condition                      shift and go to state 30
    exp                            shift and go to state 33
    termo                          shift and go to state 34
    fator                          shift and go to state 35

state 18

    (67) ciclos -> ENCUANTO . expL HACER ENTER statementsI
    (53) expL -> . termoB
    (54) expL -> . expL O termoB
    (55) termoB -> . fatorB
    (56) termoB -> . termoB y fatorB
    (57) fatorB -> . condition
    (58) fatorB -> . BOOLEANO
    (59) fatorB -> . ( expL )
    (60) condition -> . exp op exp
    (40) exp -> . exp + termo
    (41) exp -> . exp - termo
    (42) exp -> . termo
    (43) termo -> . termo * fator
    (44) termo -> . termo / fator
    (45) termo -> . termo ^ fator
    (46) termo -> . fator
    (47) fator -> . INT
    (48) fator -> . FLOAT
    (49) fator -> . ID
    (50) fator -> . ( exp )

    BOOLEANO        shift and go to state 31
    (               shift and go to state 32
    INT             shift and go to state 36
    FLOAT           shift and go to state 37
    ID              shift and go to state 38

    expL                           shift and go to state 39
    termoB                         shift and go to state 28
    fatorB                         shift and go to state 29
    condition                      shift and go to state 30
    exp                            shift and go to state 33
    termo                          shift and go to state 34
    fator                          shift and go to state 35

state 19

    (68) ciclos -> PARA . expL SIGUIENTE atrib . ENTER
    (69) ciclos -> PARA . expL SIGUIENTE atrib HACER ENTER statementsI
    (53) expL -> . termoB
    (54) expL -> . expL O termoB
    (55) termoB -> . fatorB
    (56) termoB -> . termoB y fatorB
    (57) fatorB -> . condition
    (58) fatorB -> . BOOLEANO
    (59) fatorB -> . ( expL )
    (60) condition -> . exp op exp
    (40) exp -> . exp + termo
    (41) exp -> . exp - termo
    (42) exp -> . termo
    (43) termo -> . termo * fator
    (44) termo -> . termo / fator
    (45) termo -> . termo ^ fator
    (46) termo -> . fator
    (47) fator -> . INT
    (48) fator -> . FLOAT
    (49) fator -> . ID
    (50) fator -> . ( exp )

    BOOLEANO        shift and go to state 31
    (               shift and go to state 32
    INT             shift and go to state 36
    FLOAT           shift and go to state 37
    ID              shift and go to state 38

    expL                           shift and go to state 40
    termoB                         shift and go to state 28
    fatorB                         shift and go to state 29
    condition                      shift and go to state 30
    exp                            shift and go to state 33
    termo                          shift and go to state 34
    fator                          shift and go to state 35

state 20

    (7) declV -> VAR ids . : tipo ENTER
    (9) ids -> ids . , ID

    :               shift and go to state 41
    ,               shift and go to state 42


state 21

    (8) ids -> ID .

    :               reduce using rule 8 (ids -> ID .)
    ,               reduce using rule 8 (ids -> ID .)


state 22

    (24) declF -> FUNCION ID . ( parametros ) : ENTERO ENTER declarationsF statementsI DEVUELVE return
    (25) declF -> FUNCION ID . ( ) : ENTERO ENTER declarationsF statementsI DEVUELVE return

    (               shift and go to state 43


state 23

    (13) declL -> LISTA ID . = lista ENTER

    =               shift and go to state 44


state 24

    (35) statements -> statements stat .

    ID              reduce using rule 35 (statements -> statements stat .)
    SI              reduce using rule 35 (statements -> statements stat .)
    ENCUANTO        reduce using rule 35 (statements -> statements stat .)
    PARA            reduce using rule 35 (statements -> statements stat .)
    $end            reduce using rule 35 (statements -> statements stat .)


state 25

    (36) stat -> atrib ENTER .

    ID              reduce using rule 36 (stat -> atrib ENTER .)
    SI              reduce using rule 36 (stat -> atrib ENTER .)
    ENCUANTO        reduce using rule 36 (stat -> atrib ENTER .)
    PARA            reduce using rule 36 (stat -> atrib ENTER .)
    $end            reduce using rule 36 (stat -> atrib ENTER .)
    TAB             reduce using rule 36 (stat -> atrib ENTER .)
    DEVUELVE        reduce using rule 36 (stat -> atrib ENTER .)


state 26

    (39) atrib -> ID = . exp
    (40) exp -> . exp + termo
    (41) exp -> . exp - termo
    (42) exp -> . termo
    (43) termo -> . termo * fator
    (44) termo -> . termo / fator
    (45) termo -> . termo ^ fator
    (46) termo -> . fator
    (47) fator -> . INT
    (48) fator -> . FLOAT
    (49) fator -> . ID
    (50) fator -> . ( exp )

    INT             shift and go to state 36
    FLOAT           shift and go to state 37
    ID              shift and go to state 38
    (               shift and go to state 46

    exp                            shift and go to state 45
    termo                          shift and go to state 34
    fator                          shift and go to state 35

state 27

    (51) conditions -> SI expL . ENTONCES ENTER statementsI
    (52) conditions -> SI expL . ENTONCES ENTER statementsI SI NO ENTER statementsI
    (54) expL -> expL . O termoB

    ENTONCES        shift and go to state 47
    O               shift and go to state 48


state 28

    (53) expL -> termoB .
    (56) termoB -> termoB . y fatorB

    ENTONCES        reduce using rule 53 (expL -> termoB .)
    O               reduce using rule 53 (expL -> termoB .)
    HACER           reduce using rule 53 (expL -> termoB .)
    SIGUIENTE       reduce using rule 53 (expL -> termoB .)
    )               reduce using rule 53 (expL -> termoB .)
    y               shift and go to state 49


state 29

    (55) termoB -> fatorB .

    y               reduce using rule 55 (termoB -> fatorB .)
    ENTONCES        reduce using rule 55 (termoB -> fatorB .)
    O               reduce using rule 55 (termoB -> fatorB .)
    HACER           reduce using rule 55 (termoB -> fatorB .)
    SIGUIENTE       reduce using rule 55 (termoB -> fatorB .)
    )               reduce using rule 55 (termoB -> fatorB .)


state 30

    (57) fatorB -> condition .

    y               reduce using rule 57 (fatorB -> condition .)
    ENTONCES        reduce using rule 57 (fatorB -> condition .)
    O               reduce using rule 57 (fatorB -> condition .)
    HACER           reduce using rule 57 (fatorB -> condition .)
    SIGUIENTE       reduce using rule 57 (fatorB -> condition .)
    )               reduce using rule 57 (fatorB -> condition .)


state 31

    (58) fatorB -> BOOLEANO .

    y               reduce using rule 58 (fatorB -> BOOLEANO .)
    ENTONCES        reduce using rule 58 (fatorB -> BOOLEANO .)
    O               reduce using rule 58 (fatorB -> BOOLEANO .)
    HACER           reduce using rule 58 (fatorB -> BOOLEANO .)
    SIGUIENTE       reduce using rule 58 (fatorB -> BOOLEANO .)
    )               reduce using rule 58 (fatorB -> BOOLEANO .)


state 32

    (59) fatorB -> ( . expL )
    (50) fator -> ( . exp )
    (53) expL -> . termoB
    (54) expL -> . expL O termoB
    (40) exp -> . exp + termo
    (41) exp -> . exp - termo
    (42) exp -> . termo
    (55) termoB -> . fatorB
    (56) termoB -> . termoB y fatorB
    (43) termo -> . termo * fator
    (44) termo -> . termo / fator
    (45) termo -> . termo ^ fator
    (46) termo -> . fator
    (57) fatorB -> . condition
    (58) fatorB -> . BOOLEANO
    (59) fatorB -> . ( expL )
    (47) fator -> . INT
    (48) fator -> . FLOAT
    (49) fator -> . ID
    (50) fator -> . ( exp )
    (60) condition -> . exp op exp

    BOOLEANO        shift and go to state 31
    (               shift and go to state 32
    INT             shift and go to state 36
    FLOAT           shift and go to state 37
    ID              shift and go to state 38

    expL                           shift and go to state 50
    exp                            shift and go to state 51
    termoB                         shift and go to state 28
    termo                          shift and go to state 34
    fatorB                         shift and go to state 29
    fator                          shift and go to state 35
    condition                      shift and go to state 30

state 33

    (60) condition -> exp . op exp
    (40) exp -> exp . + termo
    (41) exp -> exp . - termo
    (61) op -> . >
    (62) op -> . <
    (63) op -> . IGUAL
    (64) op -> . DIFERENTE
    (65) op -> . > IGUAL
    (66) op -> . < IGUAL

    +               shift and go to state 53
    -               shift and go to state 54
    >               shift and go to state 55
    <               shift and go to state 56
    IGUAL           shift and go to state 57
    DIFERENTE       shift and go to state 58

    op                             shift and go to state 52

state 34

    (42) exp -> termo .
    (43) termo -> termo . * fator
    (44) termo -> termo . / fator
    (45) termo -> termo . ^ fator

    +               reduce using rule 42 (exp -> termo .)
    -               reduce using rule 42 (exp -> termo .)
    >               reduce using rule 42 (exp -> termo .)
    <               reduce using rule 42 (exp -> termo .)
    IGUAL           reduce using rule 42 (exp -> termo .)
    DIFERENTE       reduce using rule 42 (exp -> termo .)
    ENTER           reduce using rule 42 (exp -> termo .)
    .               reduce using rule 42 (exp -> termo .)
    HACER           reduce using rule 42 (exp -> termo .)
    )               reduce using rule 42 (exp -> termo .)
    y               reduce using rule 42 (exp -> termo .)
    ENTONCES        reduce using rule 42 (exp -> termo .)
    O               reduce using rule 42 (exp -> termo .)
    SIGUIENTE       reduce using rule 42 (exp -> termo .)
    *               shift and go to state 59
    /               shift and go to state 60
    ^               shift and go to state 61


state 35

    (46) termo -> fator .

    *               reduce using rule 46 (termo -> fator .)
    /               reduce using rule 46 (termo -> fator .)
    ^               reduce using rule 46 (termo -> fator .)
    +               reduce using rule 46 (termo -> fator .)
    -               reduce using rule 46 (termo -> fator .)
    >               reduce using rule 46 (termo -> fator .)
    <               reduce using rule 46 (termo -> fator .)
    IGUAL           reduce using rule 46 (termo -> fator .)
    DIFERENTE       reduce using rule 46 (termo -> fator .)
    ENTER           reduce using rule 46 (termo -> fator .)
    .               reduce using rule 46 (termo -> fator .)
    HACER           reduce using rule 46 (termo -> fator .)
    )               reduce using rule 46 (termo -> fator .)
    y               reduce using rule 46 (termo -> fator .)
    ENTONCES        reduce using rule 46 (termo -> fator .)
    O               reduce using rule 46 (termo -> fator .)
    SIGUIENTE       reduce using rule 46 (termo -> fator .)


state 36

    (47) fator -> INT .

    *               reduce using rule 47 (fator -> INT .)
    /               reduce using rule 47 (fator -> INT .)
    ^               reduce using rule 47 (fator -> INT .)
    +               reduce using rule 47 (fator -> INT .)
    -               reduce using rule 47 (fator -> INT .)
    >               reduce using rule 47 (fator -> INT .)
    <               reduce using rule 47 (fator -> INT .)
    IGUAL           reduce using rule 47 (fator -> INT .)
    DIFERENTE       reduce using rule 47 (fator -> INT .)
    ENTER           reduce using rule 47 (fator -> INT .)
    .               reduce using rule 47 (fator -> INT .)
    HACER           reduce using rule 47 (fator -> INT .)
    )               reduce using rule 47 (fator -> INT .)
    y               reduce using rule 47 (fator -> INT .)
    ENTONCES        reduce using rule 47 (fator -> INT .)
    O               reduce using rule 47 (fator -> INT .)
    SIGUIENTE       reduce using rule 47 (fator -> INT .)


state 37

    (48) fator -> FLOAT .

    *               reduce using rule 48 (fator -> FLOAT .)
    /               reduce using rule 48 (fator -> FLOAT .)
    ^               reduce using rule 48 (fator -> FLOAT .)
    +               reduce using rule 48 (fator -> FLOAT .)
    -               reduce using rule 48 (fator -> FLOAT .)
    >               reduce using rule 48 (fator -> FLOAT .)
    <               reduce using rule 48 (fator -> FLOAT .)
    IGUAL           reduce using rule 48 (fator -> FLOAT .)
    DIFERENTE       reduce using rule 48 (fator -> FLOAT .)
    ENTER           reduce using rule 48 (fator -> FLOAT .)
    .               reduce using rule 48 (fator -> FLOAT .)
    HACER           reduce using rule 48 (fator -> FLOAT .)
    )               reduce using rule 48 (fator -> FLOAT .)
    y               reduce using rule 48 (fator -> FLOAT .)
    ENTONCES        reduce using rule 48 (fator -> FLOAT .)
    O               reduce using rule 48 (fator -> FLOAT .)
    SIGUIENTE       reduce using rule 48 (fator -> FLOAT .)


state 38

    (49) fator -> ID .

    *               reduce using rule 49 (fator -> ID .)
    /               reduce using rule 49 (fator -> ID .)
    ^               reduce using rule 49 (fator -> ID .)
    +               reduce using rule 49 (fator -> ID .)
    -               reduce using rule 49 (fator -> ID .)
    >               reduce using rule 49 (fator -> ID .)
    <               reduce using rule 49 (fator -> ID .)
    IGUAL           reduce using rule 49 (fator -> ID .)
    DIFERENTE       reduce using rule 49 (fator -> ID .)
    ENTER           reduce using rule 49 (fator -> ID .)
    .               reduce using rule 49 (fator -> ID .)
    HACER           reduce using rule 49 (fator -> ID .)
    )               reduce using rule 49 (fator -> ID .)
    y               reduce using rule 49 (fator -> ID .)
    ENTONCES        reduce using rule 49 (fator -> ID .)
    O               reduce using rule 49 (fator -> ID .)
    SIGUIENTE       reduce using rule 49 (fator -> ID .)


state 39

    (67) ciclos -> ENCUANTO expL . HACER ENTER statementsI
    (54) expL -> expL . O termoB

    HACER           shift and go to state 62
    O               shift and go to state 48


state 40

    (68) ciclos -> PARA expL . SIGUIENTE atrib . ENTER
    (69) ciclos -> PARA expL . SIGUIENTE atrib HACER ENTER statementsI
    (54) expL -> expL . O termoB

    SIGUIENTE       shift and go to state 63
    O               shift and go to state 48


state 41

    (7) declV -> VAR ids : . tipo ENTER
    (10) tipo -> . ENTERO
    (11) tipo -> . REAL
    (12) tipo -> . BOOLEANO

    ENTERO          shift and go to state 65
    REAL            shift and go to state 66
    BOOLEANO        shift and go to state 67

    tipo                           shift and go to state 64

state 42

    (9) ids -> ids , . ID

    ID              shift and go to state 68


state 43

    (24) declF -> FUNCION ID ( . parametros ) : ENTERO ENTER declarationsF statementsI DEVUELVE return
    (25) declF -> FUNCION ID ( . ) : ENTERO ENTER declarationsF statementsI DEVUELVE return
    (26) parametros -> . ID : tipo
    (27) parametros -> . parametros , ID : tipo

    )               shift and go to state 71
    ID              shift and go to state 69

    parametros                     shift and go to state 70

state 44

    (13) declL -> LISTA ID = . lista ENTER
    (14) lista -> . [ ]
    (15) lista -> . [ elementos ]

    [               shift and go to state 73

    lista                          shift and go to state 72

state 45

    (39) atrib -> ID = exp .
    (40) exp -> exp . + termo
    (41) exp -> exp . - termo

    ENTER           reduce using rule 39 (atrib -> ID = exp .)
    .               reduce using rule 39 (atrib -> ID = exp .)
    HACER           reduce using rule 39 (atrib -> ID = exp .)
    +               shift and go to state 53
    -               shift and go to state 54


state 46

    (50) fator -> ( . exp )
    (40) exp -> . exp + termo
    (41) exp -> . exp - termo
    (42) exp -> . termo
    (43) termo -> . termo * fator
    (44) termo -> . termo / fator
    (45) termo -> . termo ^ fator
    (46) termo -> . fator
    (47) fator -> . INT
    (48) fator -> . FLOAT
    (49) fator -> . ID
    (50) fator -> . ( exp )

    INT             shift and go to state 36
    FLOAT           shift and go to state 37
    ID              shift and go to state 38
    (               shift and go to state 46

    exp                            shift and go to state 74
    termo                          shift and go to state 34
    fator                          shift and go to state 35

state 47

    (51) conditions -> SI expL ENTONCES . ENTER statementsI
    (52) conditions -> SI expL ENTONCES . ENTER statementsI SI NO ENTER statementsI

    ENTER           shift and go to state 75


state 48

    (54) expL -> expL O . termoB
    (55) termoB -> . fatorB
    (56) termoB -> . termoB y fatorB
    (57) fatorB -> . condition
    (58) fatorB -> . BOOLEANO
    (59) fatorB -> . ( expL )
    (60) condition -> . exp op exp
    (40) exp -> . exp + termo
    (41) exp -> . exp - termo
    (42) exp -> . termo
    (43) termo -> . termo * fator
    (44) termo -> . termo / fator
    (45) termo -> . termo ^ fator
    (46) termo -> . fator
    (47) fator -> . INT
    (48) fator -> . FLOAT
    (49) fator -> . ID
    (50) fator -> . ( exp )

    BOOLEANO        shift and go to state 31
    (               shift and go to state 32
    INT             shift and go to state 36
    FLOAT           shift and go to state 37
    ID              shift and go to state 38

    termoB                         shift and go to state 76
    fatorB                         shift and go to state 29
    condition                      shift and go to state 30
    exp                            shift and go to state 33
    termo                          shift and go to state 34
    fator                          shift and go to state 35

state 49

    (56) termoB -> termoB y . fatorB
    (57) fatorB -> . condition
    (58) fatorB -> . BOOLEANO
    (59) fatorB -> . ( expL )
    (60) condition -> . exp op exp
    (40) exp -> . exp + termo
    (41) exp -> . exp - termo
    (42) exp -> . termo
    (43) termo -> . termo * fator
    (44) termo -> . termo / fator
    (45) termo -> . termo ^ fator
    (46) termo -> . fator
    (47) fator -> . INT
    (48) fator -> . FLOAT
    (49) fator -> . ID
    (50) fator -> . ( exp )

    BOOLEANO        shift and go to state 31
    (               shift and go to state 32
    INT             shift and go to state 36
    FLOAT           shift and go to state 37
    ID              shift and go to state 38

    fatorB                         shift and go to state 77
    condition                      shift and go to state 30
    exp                            shift and go to state 33
    termo                          shift and go to state 34
    fator                          shift and go to state 35

state 50

    (59) fatorB -> ( expL . )
    (54) expL -> expL . O termoB

    )               shift and go to state 78
    O               shift and go to state 48


state 51

    (50) fator -> ( exp . )
    (40) exp -> exp . + termo
    (41) exp -> exp . - termo
    (60) condition -> exp . op exp
    (61) op -> . >
    (62) op -> . <
    (63) op -> . IGUAL
    (64) op -> . DIFERENTE
    (65) op -> . > IGUAL
    (66) op -> . < IGUAL

    )               shift and go to state 79
    +               shift and go to state 53
    -               shift and go to state 54
    >               shift and go to state 55
    <               shift and go to state 56
    IGUAL           shift and go to state 57
    DIFERENTE       shift and go to state 58

    op                             shift and go to state 52

state 52

    (60) condition -> exp op . exp
    (40) exp -> . exp + termo
    (41) exp -> . exp - termo
    (42) exp -> . termo
    (43) termo -> . termo * fator
    (44) termo -> . termo / fator
    (45) termo -> . termo ^ fator
    (46) termo -> . fator
    (47) fator -> . INT
    (48) fator -> . FLOAT
    (49) fator -> . ID
    (50) fator -> . ( exp )

    INT             shift and go to state 36
    FLOAT           shift and go to state 37
    ID              shift and go to state 38
    (               shift and go to state 46

    exp                            shift and go to state 80
    termo                          shift and go to state 34
    fator                          shift and go to state 35

state 53

    (40) exp -> exp + . termo
    (43) termo -> . termo * fator
    (44) termo -> . termo / fator
    (45) termo -> . termo ^ fator
    (46) termo -> . fator
    (47) fator -> . INT
    (48) fator -> . FLOAT
    (49) fator -> . ID
    (50) fator -> . ( exp )

    INT             shift and go to state 36
    FLOAT           shift and go to state 37
    ID              shift and go to state 38
    (               shift and go to state 46
